--- a/index.html
+++ b/index.html
@@ -3042,7 +3042,7 @@ net.brehaut.ClojureTools = (function (SH) {
 </td><td class="codes"><pre class="brush: clojure">(defprotocol Validation
   (validate [self data]))</pre></td></tr><tr><td class="docs"><p><code>valid</code> is a validation that does nothing. It can be safely composed with
   other validations. It is used as the identity value for reducers/monoid
-  functions</p>
+  functions (Don't panic. You don't need to know what that means to use vlad).</p>
 </td><td class="codes"><pre class="brush: clojure">(defn valid
   [data] [])</pre></td></tr><tr><td class="docs"><p>Composed validations form a binary tree structure. This structure is
   recursively descended when validating against some data. <code>child-errors</code>
