--- a/index.html
+++ b/index.html
@@ -3100,9 +3100,10 @@ all of those errors will still be returned</p>
 </td><td class="codes"><pre class="brush: clojure">(defrecord Chain [left right]
   Validation
   (validate [self data]
-    (let [errors (child-errors self data)
-          error  (first (filter not-empty errors))]
-      (if (nil? error) [] [error]))))</pre></td></tr><tr><td class="docs"><p>Example:</p>
+    (let [first-errors (validate (:left self) data)]
+      (if (empty? first-errors)
+        (validate (:right self) data)
+        first-errors))))</pre></td></tr><tr><td class="docs"><p>Example:</p>
 
 <pre><code>(chain
   (present "Password" :password)
