--- a/index.html
+++ b/index.html
@@ -3031,7 +3031,7 @@ net.brehaut.ClojureTools = (function (SH) {
     build_tree: build_tree
   };
 })(SyntaxHighlighter);
-</script><title>vlad -- Marginalia</title></head><body><table><tr><td class="docs"><div class="header"><h1 class="project-name">vlad</h1><h2 class="project-version">0.1.0-SNAPSHOT</h2><br /><p>Vlad is an attempt at providing convenient and simple
+</script><title>vlad -- Marginalia</title></head><body><table><tr><td class="docs"><div class="header"><h1 class="project-name">vlad</h1><h2 class="project-version">1.0.0</h2><br /><p>Vlad is an attempt at providing convenient and simple
                validations. Vlad is purely functional and makes no assumptions
                about your data. It can be used for validating html form data as
                just as well as it can be used to validate your csv about cats.</p>
