--- a/test.html
+++ b/test.html
@@ -1,5 +1,6 @@
 <html>
     <body>
         <script type="text/javascript" src="cljs/out/main.js"></script>
+        <script type="text/javascript" src="cljs/out/test.js"></script>
     </body>
 </html>
